# copywright_agent_dev

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
backend/: .env.template  requirements.txt
backend/app/: database.py  graph.py  knowledge_routes.py  main.py  models.py  schemas.py
backend/data/: ARTCOOL AI Air(with Radar).md  DUALCOOL AI Air(with Radar).md  brief_objective_gen_guide.en.md  brief_objective_gen_guide.md  knowledge_base.txt  market_analyst_report_guide.md  strategic_message_gen_guide.md
backend/scripts/: ingest_data.py
backend/tools/: message_matrix_parsing.py
docs/: 429 Error 개선 내용.md  Agent_Skill_apply.md  BACKEND_ARCHITECTURE_OVERVIEW.md  Copy_Gen_process.md  FRONTEND_ARCHITECTURE_OVERVIEW.md  LDAP_Apply_Plan.md  LDAP_Login_구현.md  MIGRATION_IMPLEMENTATION_RESULT.md  MIGRATION_SKILL_SET_PLAN.md  PROJECT_ARCHITECTURE_OVERVIEW.md  PROJECT_ARCHITECTURE_OVERVIEW_KOR.md  Review 심각도.md  Skill_List.md  admin_skill_적용.md  apply_skills_and_change_UI.md  insights.md  next_session_plan.md  solmi_persona_strategy.md  user_input_data.md  경쟁사분석_웹써치.md  다국어지원.md  사용자_권한_설정.md  카피라이트 검토 업데이트 전략.md
docs/i18n/: extension-review.md  glossary-draft.md  korean-strings-inventory.md  legal-entity-reviewers.md
docs/sol_clone/: 박솔미 작가 페르소나 AI 에이전트 구축을 위한 심층 분석 및 언어 모델링 전략.md  카피라이터 박솔미 책임님에 대해서.jsx  (+2 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend-v2/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
workflow_enabler_skill/: README.md
(+334 files in other folders)
